--- a/source/ranges.tex
+++ b/source/ranges.tex
@@ -6317,7 +6317,8 @@ namespace std::ranges {
     };
 
   template<class T, size_t N>
-  concept @\defexposconcept{returnable-element}@ = is_reference_v<T> || move_constructible<tuple_element_t<N, T>>;
+  concept @\defexposconcept{returnable-element}@ =                  // \expos 
+    is_reference_v<T> || move_constructible<tuple_element_t<N, T>>;
 
   template<@\libconcept{input_range}@ V, size_t N>
     requires @\libconcept{view}@<V> && @\exposconcept{has-tuple-element}@<range_value_t<V>, N> &&
